# playground-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  api.http  ja copy.json  main.py  pyproject.toml  requirements.txt  stream.http
app/: config.py  main.py
app/application/services/: agent_information_manager.py
app/application/use_cases/: __init__.py  handle_agents.py  handle_conversation.py  handle_tools.py  handle_workflows.py
app/domain/: contants.py  utils.py
app/domain/agent/: agent.py  telemetry.py  tools.py  workflow.py
app/domain/agent_core/: service.py
app/domain/conversation/: conversation.py
app/domain/llm/: llm_settings.py
app/domain/message_store/: cosmos_db_credentials.py  mongo_message_store.py
app/domain/orchestrator/: service.py
app/domain/repository/: content_safety_repository.py  item_sql_repository.py
app/infrastructure/: agent_core.py  container.py  orchestrator.py
app/infrastructure/agents/: agnostic_agent.py  base_agent.py  drafting_agent.py
app/infrastructure/agents/plugins/: external_agent.py  monitored_agent.py
app/infrastructure/checkpoints/: cosmos_db.py
app/infrastructure/executors/: classified_agent_executor.py  executor_helpers.py  executor_types.py  intent_classifier_executor.py
app/infrastructure/managers/: http_manager.py
app/infrastructure/prompts/: drafting_agent.prompty
app/infrastructure/repository/: content_safety.py  cosmos_db.py  cosmos_db_mock.py  cosmos_message_store.py  mongo_db.py  thread_manager.py
app/infrastructure/tools/: tool_factory.py
app/presentation/: exception_handlers.py
app/presentation/api/: dependencies.py  dto.py
app/presentation/api/routes/: agents.py  documents.py  tools.py  workflows.py
app/presentation/streaming/: sse.py
application/services/: agent_manager.py  document_manager.py  thread_manager.py
application/use_cases/: handle_document.py
domain/: contants.py  exceptions.py  utils.py
domain/agent/: __init__.py  agent.py  telemetry.py  value_objects.py
domain/agent_core/: service.py
domain/conversation/: __init__.py
domain/message/: __init__.py  message.py
domain/message_store/: cosmos_message_store.py  primitive_message_store.py
domain/orchestrator/: __init__.py
domain/repository/: chat_message_store.py  document_repository.py  file_document_repository.py  history_converter.py  storage_repository.py  thread_manager_repository.py
domain/session/: session.py
infrastructure/: agent_core.py  client_factory.py  contants.py  orchestrator.py  prompt_manager.py
infrastructure/agents/: base_agent.py
infrastructure/agents/clients/: external_client.py
infrastructure/agents/plugins/: monitored_agent.py
infrastructure/checkpoints/: mongo_db.py
infrastructure/executors/: __init__.py  base_agent_executor.py  base_executor.py
infrastructure/repository/: document_manager.py  http.py  mongo_message_store.py  presentation_manager.py  storage_account.py  word_manager.py
infrastructure/retrieval/: __init__.py
infrastructure/tools/: file_manager.py  tool_factory.py
presentation/api/: error_mapper.py
presentation/api/routes/: agents.py  conversations.py  tools.py
tests/: workflow_test.py
